--- a/drag.html
+++ b/drag.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,8 +6,8 @@
 <style type="text/css">
 body,div,h2{margin:0;padding:0;}
 body{background:url(img/bg.jpg);font:12px/1.5 \5fae\8f6f\96c5\9ed1;color:#333;}
-#drag{position:absolute;top:100px;left:100px;width:300px;height:160px;background:#e9e9e9;border:1px solid #444;border-radius:5px;box-shadow:0 1px 3px 2px #666;}
-#drag .title{position:relative;height:27px;margin:5px;}
+#drag{position:absolute;background:#e9e9e9;border:1px solid #444;border-radius:5px;box-shadow:0 1px 3px 2px #666;-moz-user-select:none;-webkit-user-select:none;user-select:none;}
+#drag .title{position:relative;height:27px;margin:5px;cursor:move;}
 #drag .title h2{font-size:14px;height:27px;line-height:24px;border-bottom:1px solid #A1B4B0;}
 #drag .title div{position:absolute;height:19px;top:2px;right:0;}
 #drag .title a,a.open{float:left;width:21px;height:19px;display:block;margin-left:5px;background:url(img/tool.png) no-repeat;}
@@ -18,7 +17,7 @@ a.open:hover{background-position:0 -29px;}
 #drag .title a.min:hover{background-position:-29px -29px;}
 #drag .title a.max{background-position:-60px 0;}
 #drag .title a.max:hover{background-position:-60px -29px;}
-#drag .title a.revert{background-position:-149px 0;display:none;}
+#drag .title a.revert{background-position:-149px 0;display: none;}
 #drag .title a.revert:hover{background-position:-149px -29px;}
 #drag .title a.close{background-position:-89px 0;}
 #drag .title a.close:hover{background-position:-89px -29px;}
@@ -35,191 +34,27 @@ a.open:hover{background-position:0 -29px;}
 #drag .resizeTR{top:0;right:0;cursor:ne-resize;}
 #drag .resizeLB{left:0;bottom:0;cursor:ne-resize;}
 </style>
-<script>
-var dragMinWidth = 250;
-var dragMinHeight = 124;
 
-function drag(oDrag, handle)
-{
-	var disX = dixY = 0;
-	var oMin = oDrag.getElementsByClassName("min")[0];
-	var oMax = oDrag.getElementsByClassName("max")[0];
-	var oRevert =oDrag.getElementsByClassName("revert")[0];
-	var oClose = oDrag.getElementsByClassName("close")[0];
-	handle = handle || oDrag;
-	handle.style.cursor = "move";
-	handle.onmousedown = function (event)
-	{
-		var event = event || window.event;
-		disX = event.clientX - oDrag.offsetLeft;
-		disY = event.clientY - oDrag.offsetTop;
-		
-		document.onmousemove = function (event)
-		{
-			var event = event || window.event;
-			var iL = event.clientX - disX;
-			var iT = event.clientY - disY;
-			var maxL = document.documentElement.clientWidth - oDrag.offsetWidth;
-			var maxT = document.documentElement.clientHeight - oDrag.offsetHeight;
-			
-			iL <= 0 && (iL = 0);
-			iT <= 0 && (iT = 0);
-			iL >= maxL && (iL = maxL);
-			iT >= maxT && (iT = maxT);
-			
-			oDrag.style.left = iL + "px";
-			oDrag.style.top = iT + "px";
-			
-			return false
-		};
-		
-		document.onmouseup = function ()
-		{
-			document.onmousemove = null;
-			document.onmouseup = null;
-			this.releaseCapture && this.releaseCapture()
-		};
-		this.setCapture && this.setCapture();
-		return false
-	};	
-	//最大化按钮
-	oMax.onclick = function ()
-	{
-		oDrag.style.top = oDrag.style.left = 0;
-		oDrag.style.width = document.documentElement.clientWidth - 2 + "px";
-		oDrag.style.height = document.documentElement.clientHeight - 2 + "px";
-		this.style.display = "none";
-		oRevert.style.display = "block";
-	};
-	//还原按钮
-	oRevert.onclick = function ()
-	{		
-		oDrag.style.width = dragMinWidth + "px";
-		oDrag.style.height = dragMinHeight + "px";
-		oDrag.style.left = (document.documentElement.clientWidth - oDrag.offsetWidth) / 2 + "px";
-		oDrag.style.top = (document.documentElement.clientHeight - oDrag.offsetHeight) / 2 + "px";
-		this.style.display = "none";
-		oMax.style.display = "block";
-	};
-	//最小化按钮
-	oMin.onclick = oClose.onclick = function ()
-	{
-		oDrag.style.display = "none";
-		var oA = document.createElement("a");
-		oA.className = "open";
-		oA.href = "javascript:;";
-		oA.title = "还原";
-		document.body.appendChild(oA);
-		oA.onclick = function ()
-		{
-			oDrag.style.display = "block";
-			document.body.removeChild(this);
-			this.onclick = null;
-		};
-	};
-	//阻止冒泡
-	oMin.onmousedown = oMax.onmousedown = oClose.onmousedown = function (event)
-	{
-		this.onfocus = function () {this.blur()};
-		(event || window.event).cancelBubble = true	
-	};
-}
-
-function resize(oParent, handle, isLeft, isTop, lockX, lockY)
-{
-	handle.onmousedown = function (event)
-	{
-		var event = event || window.event;
-		var disX = event.clientX - handle.offsetLeft;
-		var disY = event.clientY - handle.offsetTop;	
-		var iParentTop = oParent.offsetTop;
-		var iParentLeft = oParent.offsetLeft;
-		var iParentWidth = oParent.offsetWidth;
-		var iParentHeight = oParent.offsetHeight;
-		
-		document.onmousemove = function (event)
-		{
-			var event = event || window.event;
-			
-			var iL = event.clientX - disX;
-			var iT = event.clientY - disY;
-			var maxW = document.documentElement.clientWidth - oParent.offsetLeft - 2;
-			var maxH = document.documentElement.clientHeight - oParent.offsetTop - 2;			
-			var iW = isLeft ? iParentWidth - iL : handle.offsetWidth + iL;
-			var iH = isTop ? iParentHeight - iT : handle.offsetHeight + iT;
-			
-			isLeft && (oParent.style.left = iParentLeft + iL + "px");
-			isTop && (oParent.style.top = iParentTop + iT + "px");
-			
-			iW < dragMinWidth && (iW = dragMinWidth);
-			iW > maxW && (iW = maxW);
-			lockX || (oParent.style.width = iW + "px");
-			
-			iH < dragMinHeight && (iH = dragMinHeight);
-			iH > maxH && (iH = maxH);
-			lockY || (oParent.style.height = iH + "px");
-			
-			if((isLeft && iW == dragMinWidth) || (isTop && iH == dragMinHeight)) document.onmousemove = null;
-			
-			return false;	
-		};
-		document.onmouseup = function ()
-		{
-			document.onmousemove = null;
-			document.onmouseup = null;
-		};
-		return false;
-	}
-};
-window.onload = window.onresize = function ()
-{
-	var oDrag = document.getElementById("drag");
-	var oTitle =oDrag.getElementsByClassName("title")[0];
-	var oL = oDrag.getElementsByClassName("resizeL")[0];
-	var oT = oDrag.getElementsByClassName("resizeT")[0];
-	var oR = oDrag.getElementsByClassName("resizeR")[0];
-	var oB = oDrag.getElementsByClassName("resizeB")[0];
-	var oLT = oDrag.getElementsByClassName("resizeLT")[0];
-	var oTR = oDrag.getElementsByClassName("resizeTR")[0];
-	var oBR = oDrag.getElementsByClassName("resizeBR")[0];
-	var oLB = oDrag.getElementsByClassName("resizeLB")[0];
-	
-	drag(oDrag, oTitle);
-	//四角
-	resize(oDrag, oLT, true, true, false, false);
-	resize(oDrag, oTR, false, true, false, false);
-	resize(oDrag, oBR, false, false, false, false);
-	resize(oDrag, oLB, true, false, false, false);
-	//四边
-	resize(oDrag, oL, true, false, false, true);
-	resize(oDrag, oT, false, true, true, false);
-	resize(oDrag, oR, false, false, false, true);
-	resize(oDrag, oB, false, false, true, false);
-	
-	oDrag.style.left = (document.documentElement.clientWidth - oDrag.offsetWidth) / 2 + "px";
-	oDrag.style.top = (document.documentElement.clientHeight - oDrag.offsetHeight) / 2 + "px";
-}
-</script>
 </head>
 <body>
-<div id="drag">
-    <div class="title">
+<div id="drag" :style="{top:top+'px',left:left+'px',height:height+'px',width:width+'px'}">
+    <div class="title" @mousedown="move">
         <h2>这是一个可以拖动的窗口</h2>
         <div>
-            <a class="min" href="javascript:;" title="最小化"></a>
-            <a class="max" href="javascript:;" title="最大化"></a>
-            <a class="revert" href="javascript:;" title="还原"></a>
-            <a class="close" href="javascript:;" title="关闭"></a>
+            <a class="min" href="javascript:;" title="最小化" @click="min"></a>
+            <a class="max" href="javascript:;" title="最大化" @click="max"></a>
+            <a class="revert" href="javascript:;" title="还原" @click="rev"></a>
+            <a class="close" href="javascript:;" title="关闭" @click="clo"></a>
         </div>
     </div>
-    <div class="resizeL"></div>
-    <div class="resizeT"></div>
-    <div class="resizeR"></div>
-    <div class="resizeB"></div>
-    <div class="resizeLT"></div>
-    <div class="resizeTR"></div>
-    <div class="resizeBR"></div>
-    <div class="resizeLB"></div>
+    <div class="resizeL" @mousedown.capture="oL"></div>
+    <div class="resizeT" @mousedown.capture="oT"></div>
+    <div class="resizeR" @mousedown.capture="oR"></div>
+    <div class="resizeB" @mousedown.capture="oB"></div>
+    <div class="resizeLT" @mousedown.capture="oLT"></div>
+    <div class="resizeTR" @mousedown.capture="oTR"></div>
+    <div class="resizeBR" @mousedown.capture="oRB"></div>
+    <div class="resizeLB" @mousedown.capture="oLB"></div>
     <div class="content">
         ① 窗口可以拖动；<br />
         ② 窗口可以通过八个方向改变大小；<br />
@@ -227,5 +62,140 @@ window.onload = window.onresize = function ()
         ④ 限制窗口最小宽度/高度。
     </div>    
 </div>
+<script src="vue.min.js" type="text/javascript" charset="utf-8"></script>
+<script>new Vue({
+	el: '#drag',
+	data: {
+		top: 200,
+		left: 300,
+		width: 300,
+		height: 160,
+		cur_height:160,
+		cur_width:300,
+	},
+	methods: {
+		oL:function(e){
+			this.resize(e.target, true, false, false, true);
+		},
+		oT:function(e){
+			this.resize(e.target, false, true, true, false);
+		},
+		oR:function(e){
+			this.resize(e.target, false, false, false, true);
+		},
+		oB:function(e){
+			this.resize(e.target, false, false, true, false);
+		},
+		oLT:function(e){
+			this.resize(e.target, true, true, false, false);
+		},
+		oTR:function(e){
+			this.resize(e.target, false, true, false, false);
+		},
+		oRB:function(e){
+			this.resize(e.target, false, false, false, false);
+		},
+		oLB:function(e){
+			this.resize(e.target, true, false, false, false);
+		},
+		resize: function(handle, isLeft, isTop, lockX, lockY) {
+			var event = event || window.event;
+			var _this = this;
+			var disX = event.clientX - handle.offsetLeft;
+			var disY = event.clientY - handle.offsetTop;
+			var iParentTop = _this.top;
+			var iParentLeft = _this.left;
+			var iParentWidth = _this.width;
+			var iParentHeight = _this.height;
+			document.onmousemove = function(event) {
+				var event = event || window.event;
+				var iL = event.clientX - disX;
+				var iT = event.clientY - disY;
+				var maxW = document.documentElement.clientWidth - _this.left - 2;
+				var maxH = document.documentElement.clientHeight - _this.top - 2;
+				var iW = isLeft ? iParentWidth - iL : handle.offsetWidth + iL;
+				var iH = isTop ? iParentHeight - iT : handle.offsetHeight + iT;
+				isLeft && (_this.left = iParentLeft + iL);
+				isTop && (_this.top = iParentTop + iT);
+				iW < _this.cur_width && (iW = _this.cur_width);
+				iW > maxW && (iW = maxW);
+				lockX || (_this.width = iW);
+				iH < _this.cur_height && (iH = _this.cur_height);
+				iH > maxH && (iH = maxH);
+				lockY || (_this.height = iH);
+				if((isLeft && iW == _this.cur_width) || (isTop && iH == _this.cur_height)) document.onmousemove = null;
+				return false;
+			};
+			document.onmouseup = function() {
+				console.log(3)
+				document.onmousemove = null;
+				document.onmouseup = null;
+			};
+		},
+	min: function() {
+		var oDrag = document.getElementById("drag");
+		oDrag.style.display = "none";
+		var oA = document.createElement("a");
+		oA.className = "open";
+		oA.href = "javascript:;";
+		oA.title = "还原";
+		document.body.appendChild(oA);
+		oA.onclick = function() {
+			oDrag.style.display = "block";
+			document.body.removeChild(this);
+			this.onclick = null;
+		};
+	},
+	max: function(e) {
+		var oDrag = document.getElementById("drag");
+		var oRevert = oDrag.getElementsByClassName("revert")[0];
+		this.top = this.left = 0;
+		this.width = document.documentElement.clientWidth - 2;
+		this.height = document.documentElement.clientHeight - 2;
+		e.target.style.display = "none";
+		oRevert.style.display = "block";
+	},
+	rev: function(e) {
+		var oDrag = document.getElementById("drag");
+		var oMax = oDrag.getElementsByClassName("max")[0];
+		this.left = 300;
+		this.top = 200;
+		this.height = 160;
+		this.width = 300;
+		e.target.style.display = "none";
+		oMax.style.display = "block"
+	},
+	clo: function() {
+		var oDrag = document.getElementById("drag");
+		document.body.removeChild(oDrag);
+	},
+	move: function(event) {
+		var disX = event.clientX - this.left;
+		var disY = event.clientY - this.top;
+		var _this = this;
+		document.onmousemove = function(event) {
+			var iL = event.clientX - disX;
+			var iT = event.clientY - disY;
+			var maxL = document.documentElement.clientWidth - 300;
+			var maxT = document.documentElement.clientHeight - 160;
+			iL <= 0 && (iL = 0);
+			iT <= 0 && (iT = 0);
+			iL >= maxL && (iL = maxL);
+			iT >= maxT && (iT = maxT);
+			_this.left = iL;
+			_this.top = iT;
+			return false;
+		};
+		document.onmouseup = function() {
+			document.onmousemove = null;
+			document.onmouseup = null;
+			_this.releaseCapture && _this.releaseCapture()
+		};
+		_this.setCapture && _this.setCapture();
+		return false
+	}
+}
+})
+</script>
 </body>
 </html>
