--- a/index.html
+++ b/index.html
@@ -88,8 +88,11 @@
 					<li>Bootstrap ui</li>
 				</ul>
 				<ul class="skill-tech">
-					<li>技术</li>
-					<li>Ajax</li>
+					<li>其他</li>
+					<li>axios</li>
+					<li>TweenMax</li>
+					<li>vee-validate</li>
+					<li>VUEX</li>
 				</ul>
 			</div>
 		</div>
