--- a/index.html
+++ b/index.html
@@ -83,14 +83,15 @@
 				</ul>
 				<ul class="skill-frame">
 					<li>框架</li>
+					<li>VUE</li>
 					<li>jQuery</li>
-					<li>vue</li>
 					<li>Bootstrap ui</li>
 				</ul>
 				<ul class="skill-tech">
 					<li>其他</li>
 					<li>axios</li>
 					<li>TweenMax</li>
+					<li>vouter</li>
 					<li>vee-validate</li>
 					<li>VUEX</li>
 				</ul>
