--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 			<li><span>贪吃蛇</span> | <a href="snake.html">点击进入</a></li>
 			<li><span>炮弹测试</span> | <a href="tank/tank.html">点击进入</a></li>
 			<li><span>窗口拖拽</span> | <a href="drag.html">点击进入</a></li>
-			<li><span>仿熊猫TV</span> | <a href="panda_tv/new_file.html">点击进入</a></li>
+			<li><span>仿熊猫TV</span> | <a href="panda_tv/index.html">点击进入</a></li>
 		</ul>
 		<ul class="prjs-two">
 			<li><span>自定义滚动条</span> | <a href="scroll bar/index.html">点击进入</a></li>
