--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 准的页面<br>
 						有良好的编码习惯。<br>
 						熟练使用jQuery，vue ,bootstrap框架<br>
+						可以从零开始搭建一个Vue项目，掌握ps切图能力<br>
 						了解PHP+MySQL；理解基本的算法分析与数据结构，能够配合后台程序员完成
 相关工作。
 					</p>
