--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 			<li><span>自定义滚动条</span> | <a href="scroll bar/index.html">点击进入</a></li>
 			<li><span>自定义右键菜单</span> | <a href="oncontextmenu/index.html">点击进入</a></li>
 			<li><span>选项卡</span> | <a href="tabs/index.html">点击进入</a></li>
-			<li><span>移动效果</span> | <a href="move/index.html">点击进入</a></li>
+			<li><span>bilibili搜索页 </span> | <a href="shinyruo/index.html">点击进入</a></li>
 			<li><span>跟随鼠标移动</span> | <a href="follow mouse/index.html">点击进入</a></li>
 			<li><span>LOL页</span> | <a href="LOL_active/index.html">点击进入</a></li>
 			<li><span>弹幕测试</span> | <a href="danmu/index.html">点击进入</a></li>
