--- a/index.html
+++ b/index.html
@@ -158,13 +158,11 @@
 		<ul class="prjs-two">
 			<li><span>自定义滚动条</span> | <a href="scroll bar/index.html">点击进入</a></li>
 			<li><span>自定义右键菜单</span> | <a href="oncontextmenu/index.html">点击进入</a></li>
-			<li><span>选项卡</span> | <a href="tabs/index.html">点击进入</a></li>
+			<li><span>某个网图</span> | <a href="John Doe/index.html">点击进入</a></li>
 			<li><span>bilibili搜索页 </span> | <a href="shinyruo/index.html">点击进入</a></li>
-			<li><span>跟随鼠标移动</span> | <a href="follow mouse/index.html">点击进入</a></li>
 			<li><span>LOL页</span> | <a href="LOL_active/index.html">点击进入</a></li>
 			<li><span>弹幕测试</span> | <a href="danmu/index.html">点击进入</a></li>
 			<li><span>自动播放</span> | <a href="change/index.html">点击进入</a></li>
-			
 		</ul></div>
 	</div>
 </section>
