--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 				<ul class="skill-idea">
 					<li>思想</li>
 					<li>W3C标准</li>
-					<li>语义化</li>
-					<li>表现与结构分离</li>
+					<li>模块化</li>
+					<li>mvvm框架</li>
 					<li>响应式设计</li>
 				</ul>
 				<ul class="skill-frame">
@@ -146,20 +146,21 @@
 		</div>
 		<div class="prjEXP-con">
 			<ul class="prjs-one">
+			<li><span>仿熊猫TV</span> | <a href="panda_tv/index.html">点击进入</a></li>
+			<li><span>bilibili搜索页 </span> | <a href="shinyruo/index.html">点击进入</a></li>
+			<li><span>华容道游戏</span> | <a href="华容道/new_file.html">点击进入</a></li>
+			<li><span>某个网图</span> | <a href="John Doe/index.html">点击进入</a></li>
+			<li><span>acfun</span> | <a href="acfun/index.html">点击进入</a></li>
 			<li><span>百度</span> | <a href="baidu/index.html">点击进入</a></li>
 			<li><span>小球下落</span> | <a href="ball.html">点击进入</a></li>
-			<li><span>华容道游戏</span> | <a href="华容道/new_file.html">点击进入</a></li>
 			<li><span>小球动画优化版</span> | <a href="time3/index.html">点击进入</a></li>
+		</ul>
+		<ul class="prjs-two">
 			<li><span>贪吃蛇</span> | <a href="snake.html">点击进入</a></li>
 			<li><span>炮弹测试</span> | <a href="tank/tank.html">点击进入</a></li>
 			<li><span>窗口拖拽</span> | <a href="drag.html">点击进入</a></li>
-			<li><span>仿熊猫TV</span> | <a href="panda_tv/index.html">点击进入</a></li>
-		</ul>
-		<ul class="prjs-two">
 			<li><span>自定义滚动条</span> | <a href="scroll bar/index.html">点击进入</a></li>
 			<li><span>自定义右键菜单</span> | <a href="oncontextmenu/index.html">点击进入</a></li>
-			<li><span>某个网图</span> | <a href="John Doe/index.html">点击进入</a></li>
-			<li><span>bilibili搜索页 </span> | <a href="shinyruo/index.html">点击进入</a></li>
 			<li><span>LOL页</span> | <a href="LOL_active/index.html">点击进入</a></li>
 			<li><span>弹幕测试</span> | <a href="danmu/index.html">点击进入</a></li>
 			<li><span>自动播放</span> | <a href="change/index.html">点击进入</a></li>
