--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<li><span>手机</span> | 18264813395</li>
 					<li><span>邮箱</span> | 837808554@qq.com</li>
 					<li><span>所在地</span> | 山东 - 烟台</li>
-					<li><span>GitHub</span> | <a href="https://allissb.github.io/1/" hideFocus="true">点击
+					<li><span>GitHub</span> | <a href="https://allissb.github.io/KEKE/" hideFocus="true">点击
 
 进入</a> </li>
 				</ul>
