--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 					<li>VUE</li>
 					<li>jQuery</li>
 					<li>Bootstrap ui</li>
+					<li>sass</li>
 				</ul>
 				<ul class="skill-tech">
 					<li>其他</li>
