--- a/tabs.html
+++ b/tabs.html
@@ -57,6 +57,7 @@
 					if(/((user)?=)(\W)/.test(ca[i])&&ca[i].slice(1,5)=='user'){
 						var d=ca[i].slice(6)
 var c=JSON.parse(d)
+alert(c.name)
 if(c.name){
 this.cunc=false}
 					}
