--- a/tabs.html
+++ b/tabs.html
@@ -51,6 +51,7 @@
 				}
 			},
 			created:function(){
+				alert(document.cookie)
 				var decodedCookie = decodeURIComponent(document.cookie);
 				var ca = decodedCookie.split(';');
 				for(var i = 0; i <ca.length; i++) {
