--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 			<li><span>某个网图</span> | <a href="John Doe/index.html">点击进入</a></li>
 			<li><span>acfun</span> | <a href="acfun/index.html">点击进入</a></li>
 			<li><span>百度</span> | <a href="baidu/index.html">点击进入</a></li>
-			<li><span>电影网站</span> | <a href="movie/index.html?login">点击进入</a></li>
+			<li><span>电影网站</span> | <a href="movie/index.html#/login">点击进入</a></li>
 			<li><span>小球动画优化版</span> | <a href="time3/index.html">点击进入</a></li>
 		</ul>
 		<ul class="prjs-two">
