--- a/movie/index.html
+++ b/movie/index.html
@@ -6,7 +6,7 @@
 		<meta name=viewport content="width=device-width,initial-scale=1">
 		<title></title>
 		<link rel=stylesheet type=text/css href=./static/movie/reset.css>
-		<link rel=stylesheet href=./static/movie/element.css>
+		<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
 		<link href=./static/css/app.b3808ada60124c28b9f256b7d44dfc98.css rel=stylesheet>
 	</head>
 
