--- a/movie/ac/index.html
+++ b/movie/ac/index.html
@@ -6,7 +6,7 @@
 		<meta name=viewport content="width=device-width,initial-scale=1">
 		<title></title>
 		<link rel=stylesheet type=text/css href=./static/my_home/reset.css>
-		<link rel=stylesheet href=./static/my_home/element.css>
+		<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
 		<link href=./static/css/app.b5f0c1390c0dc260381a9a4f81f9f68b.css rel=stylesheet>
 	</head>
 
