--- a/movie/item/index.html
+++ b/movie/item/index.html
@@ -6,7 +6,7 @@
 		<meta name=viewport content="width=device-width,initial-scale=1">
 		<title></title>
 		<link rel=stylesheet type=text/css href=./static/item/reset.css>
-		<link rel=stylesheet href=./static/item/element.css>
+		<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
 		<link href=./static/css/app.16f245bd25914558d6f20cbcad2ec8c1.css rel=stylesheet>
 	</head>
 
