--- a/shinyruo/index.html
+++ b/shinyruo/index.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-	<head>
-		<meta charset=utf-8>
-		<meta name=viewport content="width=device-width,initial-scale=1">
-		<title>- 搜索结果 -</title>
-		<link href=./static/css/app.dbebf04d302eaf6604488179465496e3.css rel=stylesheet>
-	</head>
-
-	<body>
-		<div id=app></div>
-		<script type=text/javascript src=./static/js/manifest.2ae2e69a05c33dfc65f8.js></script>
-		<script type=text/javascript src=./static/js/vendor.63e0316cd674ae341dbf.js></script>
-		<script type=text/javascript src=./static/js/app.9c3fe614b11304b9c7bb.js></script>
-	</body>
-
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>- 搜索结果 -</title><link href=./static/css/app.d8267c7d35f7a0567b5b646b2605b592.css rel=stylesheet></head><body><div id=app></div><script src=./static/top.js type=text/javascript charset=utf-8></script><script type=text/javascript src=./static/js/manifest.2ae2e69a05c33dfc65f8.js></script><script type=text/javascript src=./static/js/vendor.63e0316cd674ae341dbf.js></script><script type=text/javascript src=./static/js/app.3a035e027b51feaf56b4.min.js></script></body></html>
