--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				</ul>
 				<div class="fr">	<p>我是一个性格幽默、做事认真的人。<br>我喜欢研究所碰到的各种技术，不给自己
 设边界。<br>我有时间概念，能在约定时间内保证完成任务。</p>
-					<p>三个月前端开发学习经验，熟悉 HTML、CSS、Javascript，可以开发符合 W3C 标
+					<p>六个月前端开发学习经验，熟悉 HTML、CSS、Javascript，可以开发符合 W3C 标
 准的页面<br>
 						有良好的编码习惯。<br>
 						熟练使用jQuery，vue ,bootstrap框架<br>
@@ -157,14 +157,10 @@
 			<li><span>小球动画优化版</span> | <a href="time3/index.html">点击进入</a></li>
 		</ul>
 		<ul class="prjs-two">
-			<li><span>贪吃蛇</span> | <a href="snake.html">点击进入</a></li>
 			<li><span>炮弹测试</span> | <a href="tank/tank.html">点击进入</a></li>
 			<li><span>窗口拖拽</span> | <a href="drag.html">点击进入</a></li>
 			<li><span>自定义滚动条</span> | <a href="scroll bar/index.html">点击进入</a></li>
-			<li><span>自定义右键菜单</span> | <a href="oncontextmenu/index.html">点击进入</a></li>
 			<li><span>LOL页</span> | <a href="LOL_active/index.html">点击进入</a></li>
-			<li><span>弹幕测试</span> | <a href="danmu/index.html">点击进入</a></li>
-			<li><span>自动播放</span> | <a href="change/index.html">点击进入</a></li>
 		</ul></div>
 	</div>
 </section>
