--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 			<ul class="prjs-one">
 			<li><span>仿熊猫TV</span> | <a href="panda_tv/index.html">点击进入</a></li>
 			<li><span>bilibili搜索页 </span> | <a href="shinyruo/index.html">点击进入</a></li>
-			<li><span>华容道游戏</span> | <a href="华容道/new_file.html">点击进入</a></li>
+			<li><span>华容道游戏</span> | <a href="华容道/index.html">点击进入</a></li>
 			<li><span>某个网图</span> | <a href="John Doe/index.html">点击进入</a></li>
 			<li><span>acfun</span> | <a href="acfun/index.html">点击进入</a></li>
 			<li><span>百度</span> | <a href="baidu/index.html">点击进入</a></li>
