--- a/华容道/index.html
+++ b/华容道/index.html
@@ -10,16 +10,16 @@
 	<body>
 		<div class="wrap">
 			<ul class="list">
-				<li class="hi"><img src="img/ZF.png"/></li>
-				<li class="hw"><img src="img/CC.png"/></li>
-				<li class="hi"><img src="img/ZY.png"/></li>
-				<li class="hi"><img src="img/HZ.png"/></li>
-				<li class="wi"><img src="img/GY.png"/></li>
-				<li class="hi"><img src="img/MC.png"/></li>
-				<li class="xiao"><img src="img/XB.png"/></li>
-				<li class="xiao"><img src="img/XB.png"/></li>
-				<li class="xiao"><img src="img/XB.png"/></li>
-				<li class="xiao"><img src="img/XB.png"/></li>
+				<li class="hi"><img src="ZF.png"/></li>
+				<li class="hw"><img src="CC.png"/></li>
+				<li class="hi"><img src="ZY.png"/></li>
+				<li class="hi"><img src="HZ.png"/></li>
+				<li class="wi"><img src="GY.png"/></li>
+				<li class="hi"><img src="MC.png"/></li>
+				<li class="xiao"><img src="XB.png"/></li>
+				<li class="xiao"><img src="XB.png"/></li>
+				<li class="xiao"><img src="XB.png"/></li>
+				<li class="xiao"><img src="XB.png"/></li>
 				<div class="a spa"></div>
 				<div class="b spa"></div>
 			</ul>
